Assertion failures in ImageKit soft linking https://bugs.webkit.org/show_bug.cgi?id=138009

Reviewed by Anders Carlsson.

* UIProcess/API/mac/WKView.mm:
Soft-link ImageKit correctly.
ImageKit is inside the Quartz umbrella framework.


Canonical link: https://commits.webkit.org/155870@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@175127 268f45cc-cd09-0410-ab3c-d52691b4dbfc